force-app/main/default/objects/Key_Contributor__c/Key_Contributor__c.object-meta.xml
<CustomObject>
    <description>Used to connect constituents that are associated with Cases, original request from CFR.</description>
    <label>Key Contributor</label>
    <nameField>
        <displayFormat>KC-{000000}</displayFormat>
        <label>Key Contributor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>