force-app/main/default/objects/Key_Contributor__c/fields/Constituent_Role__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Role__c</fullName>
    <inlineHelpText>Role the Contributor is playing in this Engagement Plan/Case</inlineHelpText>
    <label>Constituent Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Constituent</fullName>
            </value>
            <value>
                <fullName>Primary Organization</fullName>
            </value>
            <value>
                <fullName>ISU Representative</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Constituent Advisor (attorneys, financial advisors, etc.)</fullName>
            </value>
            <value>
                <fullName>Additional Organization</fullName>
            </value>
            <value>
                <fullName>Related Organization</fullName>
            </value>
            <value>
                <fullName>Organization Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>