force-app/main/default/objects/Key_Contributor__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contributor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Contributors</relationshipLabel>
    <relationshipName>Key_Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>